# SCPA_Project

./: .gitignore  README.md  SyncProject.sh  SyncResults.sh  sync.bash
doc/: MPI_Distribuzioni_Dati.odg
doc/Images/CUDA/: Kernel_0.odg  Kernel_0_1_Pattern_Accesso.odg  Kernel_2.odg  Kernel_3.odg  Loading_Pattern.odg  Tiling_Kernel_3.tif
doc/Images/MPI/: MPI_Type_1.odg  MPI_Type_2.odg  MPI_Type_Division.odg
project/: CMakeCaller.sh  CMakeLists.txt  RunAllTests.sh  RunCudaTests.sh  RunMpiTests.sh  RunTests.sh
project/CMake/: CMakeCache.txt  Makefile  cmake_install.cmake
project/Results/: MPI_Avg.csv  MPI_Test.csv
project/Results/CUDA/Tests/: CUDA_Rect_Test.csv  CUDA_Square_Test.csv
project/Results/MPI/: MPI_GFLOPS.csv  MPI_Test.csv
project/Results/MPI/Tests/: MPI_Rect_Test.csv  MPI_Square_Test.csv
project/Results/Scripts/: AnalyzeResults.py
project/code/CUDA/: CudaProduct.cu  CudaProduct.h
project/code/CUDA/Kernel/: Kernel_0.cuh  Kernel_1.cuh  Kernel_2.cuh  Kernel_3.cuh  Kernel_4.cuh  Kernel_5.cuh  Kernel_6.cuh  SubMatricesLoader.cuh
project/code/MPI/: Attempt.txt  MpiProduct.c  MpiProduct.h  SendRecvUtils.c  SendRecvUtils.h  Utils.c  Utils.h  main.c
project/code/Matrix/: Matrix.c  Matrix.h
project/code/NonParallel/: NonParallelMultiplicator.c
project/code/OpenMP/: main.c
project/code/OpenMp/: OpenMpProduct.c  OpenMpProduct.h
project/code/Sequential/: Sequential.c  Sequential.h
project/code/Test/: CudaSingleTest.c  CudaSingleTest.cpp  CudaTest.cpp  MpiSingleTest.c  MpiTest.c  ResultWriter.c  ResultWriter.h  Test.c  Test.h  TestResultWriter.c
project/code/Utils/: PrintUtils.c  PrintUtils.h
